fix alignment

--- a/client/style.css
+++ b/client/style.css
@@ -3,17 +3,33 @@
 }
 
 body {
-  background-color: #e0e0db;
   margin: 0;
   line-height: 1.6;
   min-height: 100vh;
+  background-image: linear-gradient(to bottom right, #e3e3de , #6bb6c0cb);
+}
+
+header {
+  background-image: linear-gradient(to top left, #e3e3de , #6bb6c0cb);
+  padding-top: .5em;
+  border-bottom: 5px solid #8e8e3a;
+  /* padding-bottom: .5em; */
+  /* -webkit-box-shadow: 0px 0px 14px 0px #8e8e3a;
+  -moz-box-shadow: 0px 0px 14px 0px #8e8e3a; */
+  box-shadow: 0px 0px 14px 0px #000000;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px; 
 }
 
 .topPage {
   display: flex;
   flex-direction: row;
 }
-
+p {
+  padding: 20px;
+  text-align: center;
+}
 ul {
   margin: 0;
   padding: 0;
@@ -28,22 +44,11 @@ a {
 .logo {
 	margin: 0;
   padding: 20px 20px 0px 20px;
-  font-size: 70px;
+  font-size: 80px;
   text-align:left;
   color: rgb(0, 0, 0)
 }
 
-header {
-  padding-top: .5em;
-	border-bottom: 5px solid #8e8e3a;
-  /* padding-bottom: .5em; */
-	-webkit-box-shadow: 0px 0px 14px 0px #8e8e3a;
-	-moz-box-shadow: 0px 0px 14px 0px #8e8e3a;
-	box-shadow: 0px 0px 14px 0px #8e8e3a;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px; 
-}
 
 h1 {
   margin-top: 5px;
@@ -67,9 +72,8 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  font-size: 20px;
-  background-color: rgba(128, 128, 128, 0.576) ;
-  padding: 5px;
+  background-color: rgba(128, 128, 128, 0.342) ;
+  padding: 10px;
   list-style: none;
 	margin: 0px 0px 0px 0px;
   text-align: center;
@@ -84,8 +88,8 @@ h2 {
 
 .nav-bar a {
   font-weight: 900;
-	color: #1e4a4f;
-	font-size: .99em;
+	color: #000000;
+	font-size: 20px;
 }
 
 .nav-bar a:hover{
@@ -101,13 +105,16 @@ main {
 }
 
 img {
-  /* display: flex; */
+  display: flex;
+  justify-content: space-between;
   min-height: 10vmin;
   min-width: 10vmin;
   max-width: 40vmax;
   max-height: 40vmax;
   align-content: center;
   object-fit: cover;
+  padding: 30px;
+  box-shadow: 20px #34495e;
 }
 
 form {
@@ -128,6 +135,7 @@ form {
 .container {
   /* font: rgb(255, 255, 255); */
   /* padding: 20px; */
+  font-size: 18px;
   background-color: #1e4a4f;
   font-family: 'Montserrat', sans-serif;
   color: white;
@@ -142,9 +150,14 @@ form {
   padding: 40px 180px 40px 180px;
   justify-content: space-around;
   align-items: center;
-  font-size: 15px;
+  border-radius: 2px;
+  font-size: 18px;
 }
 
+.movieContainer {
+  display: list-item;
+  max-width: 90 vmax;
+}
 #movieContainer.container {
   background-color: #e0e0db;
   align-items: center;
@@ -166,21 +179,27 @@ form {
   background-color: rgb(255, 255, 255);
   color: black;
   font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
   height: 40px;
-  width: 200px;
-  border-radius: 2px;
+  width: 400px;
+  border-radius: 3px;
   border: none;
   padding: 5px;
   margin: 10px;
 }
 
 .searchBtn {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 15px;
   background-color: #8e8e3a;
-  color: black;
+  padding: 12px;
+  font-size: 18px;
+  Color: white;
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 3px;
 }
-
+/* #subscribeForm {
+  box-shadow: 0px 0px 0px 0px #000000;
+} */
 
 #subName{
   font-family: 'Montserrat', sans-serif;
@@ -212,7 +231,8 @@ input[type=checkbox] {
 /* Style the submit button */
 button[type=submit] {
   background-color: #8e8e3a;
-  color: white;
+  font-size: 18px;
+  Color: white;
   border: none;
   font-family: 'Montserrat', sans-serif;
 }
@@ -289,6 +309,7 @@ footer {
   width: 80%;
   max-width: 700px;
   height: 800px;
+  overflow-wrap: break-word;
 }
 
 #modalName {
